# One_Market

./: .gitignore  ADVANCED_SYSTEM_SUMMARY.md  ARCHITECTURE.md  AUTOMATIC_DATA_REFRESH_SUMMARY.md  BACKTEST_DESIGN.md  CHANGELOG.md  COMO_EJECUTAR_PROYECTO.md  COMO_EMPEZAR_V2.md  COMPLETE_IMPLEMENTATION_GUIDE.md  COMPLETE_SESSION_REPORT.md  CONTRIBUTING.md  CREAR_DATOS_SIMULADOS.bat  CREAR_DATOS_SIMULADOS.py  DEBUG_UI_ESPECIFICO.bat  DEBUG_UI_PASO_A_PASO.bat  DEBUG_UI_SIMPLE.bat  DEBUG_UI_SIN_CERRAR.bat  DETENER_SERVICIOS.bat  DETENER_SIMPLE.bat  DIAGNOSTICO_PUERTOS.bat  EJECUTAR_AHORA.md  EJECUTAR_API.bat  EJECUTAR_ENHANCED_UI.bat  EJECUTAR_PASO_A_PASO.bat  EJECUTAR_PASO_A_PASO.txt  EJECUTAR_PROYECTO_COMPLETO.bat  EJECUTAR_SIMPLE.bat  EJECUTAR_SISTEMA_COMPLETO.bat  EJECUTAR_SISTEMA_COMPLETO_CORREGIDO.bat  EJECUTAR_SISTEMA_DEFINITIVO.bat  EJECUTAR_SISTEMA_FINAL.bat  EJECUTAR_SISTEMA_PYTHON.bat  EJECUTAR_TEST_API.bat  EJECUTAR_TEST_RECOMENDACIONES.bat  EJECUTAR_TODO.bat  EJECUTAR_TODO_COMPLETO.bat  EJECUTAR_TODO_CON_UI_COMPLETA.bat  EJECUTAR_UI.bat  EJECUTAR_UI_COMPLETA.bat  EJECUTAR_UI_CON_PYTHON.bat  (+153 more)
app/: __init__.py  jobs.py
docs/: ADVANCED_FEATURES.md  COMPLETE_ADVANCED_SYSTEM.md
examples/: example_advanced_system.py  example_analyze_data.py  example_auto_strategy_selection.py  example_backtest_complete.py  example_core_usage.py  example_daily_decision.py  example_fetch_data.py  example_multi_timeframe.py  example_new_strategies_optimization.py  example_read_data.py  example_research_signals.py
scripts/: backfill_data.py  cron_example.sh  generate_artifacts.py  (+7 more)
(+127 files in other folders)
